# changelog-fragments-creator

./: CHANGELOG.md  README.md  changelog-creator
.fragments/1.0/: 1_initial_release.yaml  release_meta.yml
.fragments/1.1/: 3_colon-fix.yaml  release_meta.yml
.fragments/1.2/: 6_write_logfile_sorted.yaml  release_meta.yml
.fragments/1.3/: 8_possibility_to_skip_release_changelog_entries.yaml  release_meta.yml
example/changelog-fragments/0.9/: 123_initial_build.yaml  124_remove_dependency.yaml  release_meta.yml
example/changelog-fragments/1.0/: 487_initial_stable_release.yml  981_add.foo.yml  release_meta.yml
packaging/: CMakeLists.txt  README.md  deb_changelog.txt  fbsd_changelog.txt  rpm_changelog.txt
